8310831: Some methods are missing from CDS regenerated JLI holder class